--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,18 +25,6 @@
             ],
             "problemMatcher": "$msCompile"
         },
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "--project",
-                "${workspaceFolder}/SongLyrics/SongLyrics.csproj"
-            ],
-            "problemMatcher": "$msCompile"
-        },
         { 
             "label": "watch",
             "command": "dotnet",
@@ -49,7 +37,7 @@
             "isBackground": true,
             "group": {
                 "kind": "build",
-                "isDefault": true
+                "isDefault": false
             }
         }
     ]
